--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -350,6 +350,11 @@ config PM_SYNC_BEFORE_SUSPEND
 	default y
 
 config	BOEFFLA_WL_BLOCKER
-		bool "Boeffla generic wakelock blocker driver"
-		depends on PM
-		default y
+	bool "Boeffla generic wakelock blocker driver"
+	depends on PM
+	default y
+
+config QUICK_WAKEUP
+	bool "Quick wakeup"
+	depends on SUSPEND
+	default y
