--- a/arch/arm64/configs/gemini_defconfig
+++ b/arch/arm64/configs/gemini_defconfig
@@ -1,12 +1,18 @@
+CONFIG_LOCALVERSION="-Cosmic"
+CONFIG_SWAP=y
+CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_SCHED_WALT=y
+CONFIG_SCHED_WALT_DEFAULT=y
 CONFIG_TASKSTATS=y
+# CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
-CONFIG_RCU_KTHREAD_PRIO=2
+CONFIG_RCU_KTHREAD_PRIO=5
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=15
 CONFIG_CGROUPS=y
@@ -14,11 +20,11 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
+# CONFIG_MEMCG is not set
+# CONFIG_MEMCG_SWAP is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
-CONFIG_SCHED_HMP=y
+CONFIG_SCHED_TUNE=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
@@ -39,7 +45,7 @@ CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
 CONFIG_ENABLE_FP_SIMD_SETTINGS=y
-CONFIG_MSM_APP_SETTINGS=y
+# CONFIG_MSM_APP_SETTINGS is not set
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
 CONFIG_PREEMPT=y
@@ -63,13 +69,13 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
-CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_SCHED=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -289,7 +295,7 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CNSS_CRYPTO=y
 CONFIG_CNSS=y
 CONFIG_CLD_LL_CORE=y
-CONFIG_BUS_AUTO_SUSPEND=y
+# CONFIG_BUS_AUTO_SUSPEND is not set
 CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
@@ -318,7 +324,6 @@ CONFIG_FINGERPRINT_FPC1020_TA=y
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_SMD=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
-# CONFIG_DEVPORT is not set
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
 CONFIG_I2C_CHARDEV=y
@@ -338,7 +343,6 @@ CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_EPM_ADC=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
@@ -411,6 +415,7 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_SOUND=y
 CONFIG_SND=y
@@ -476,6 +481,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -526,7 +532,6 @@ CONFIG_MSM_MEMORY_DUMP_V2=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_CACHE_M4M_ERP64=y
-CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE=y
 CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE=y
 CONFIG_MSM_RPM_SMD=y
 CONFIG_MSM_RPM_LOG=y
@@ -556,8 +561,8 @@ CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_TRACER_PKT=y
-CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_POWER=y
+CONFIG_MSM_QBT1000=y
 CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_SERIAL_NUM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
@@ -571,6 +576,9 @@ CONFIG_MSM_TZ_LOG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_QUOTA=y
+CONFIG_QUOTA_NETLINK_INTERFACE=y
+CONFIG_QFMT_V2=y
 CONFIG_FUSE_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
@@ -600,6 +608,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_SCHED_DEBUG is not set
+CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
